Major refactoring to use j.u.c.Flow
* Use java.util.concurrent.Flow from reactive streams of images
* Library classes for simulated/generated streams of images
* Refactor libraries/apps to be less tied to sarxos-webcam
* created QRCodeImageView which binds to an input QR code string and
  dynamically updates.